# qcif-chat-app

./: .gitignore  CHANGELOG.md  QCIF.cabal  README.md  chat-server.db  docker-compose.yaml  dockerfile  server-graph.dot
app/: Main.hs
src/: Server.hs
src/Data/: DB.hs  Html.hs  Types.hs
src/Data/DB/: Schema.hs
src/Data/Html/: Error.hs  Login.hs  Message.hs  Page.hs  Register.hs  Root.hs  User.hs  Util.hs
src/Data/Types/: API.hs  AppM.hs  Auth.hs  Env.hs  Error.hs  Message.hs  Orphans.hs  User.hs  Util.hs
static/: main.css
test/: Main.hs
test/Test/: API.hs  Commands.hs  StateMachine.hs  Types.hs
