cabal-version:      3.0
name:               QCIF
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Owen Harvey
maintainer:         owenlharvey@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    build-depends:    base ^>=4.19.1.0
                    , lens
                    , transformers
                    , mtl
                    , containers
                    , sqlite-simple
                    , servant
                    , servant-auth
                    , servant-auth-server
                    , servant-server
                    , text
                    , time
                    , uuid
                    , wai
                    , warp
                    , password
                    , aeson
                    , blaze-html
                    , blaze-markup
                    , servant-blaze
                    , jose
                    , bytestring
                    , http-api-data
    exposed-modules:  Data.Types
                    , Data.Types.API
                    , Data.Types.User
                    , Data.Types.AppM
                    , Data.Types.Error
                    , Data.Types.Env
                    , Data.Types.Message
                    , Data.Types.Orphans
                    , Data.Types.Auth
                    , Data.DB
                    , Data.DB.Schema
                    , Data.Html
                    , Data.Html.Message
                    , Data.Html.Root
                    , Server
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions: DataKinds
                      , OverloadedRecordDot
                      , OverloadedStrings

executable QCIF
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0
                    , QCIF
    hs-source-dirs:   app
    default-language: GHC2021
