cabal-version:      3.0
name:               QCIF
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Owen Harvey
maintainer:         owenlharvey@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

flag tls
    default: False
    manual: True

common warnings
    ghc-options: -Wall

library
    import:           warnings
    build-depends:    base
                    , lens
                    , transformers
                    , mtl
                    , containers
                    , sqlite-simple
                    , servant
                    , servant-auth
                    , servant-auth-server
                    , servant-server
                    , text
                    , time
                    , uuid
                    , wai
                    , warp
                    , password
                    , aeson
                    , blaze-html
                    , blaze-markup
                    , servant-blaze
                    , jose
                    , bytestring
                    , http-api-data
                    , filepath
                    , directory
                    , servant-openapi3
                    , openapi3
                    , insert-ordered-containers
    exposed-modules:  Data.Types
                    , Data.Types.API
                    , Data.Types.User
                    , Data.Types.AppM
                    , Data.Types.Error
                    , Data.Types.Env
                    , Data.Types.Message
                    , Data.Types.Orphans
                    , Data.Types.Auth
                    , Data.Types.Util
                    , Data.DB
                    , Data.DB.Schema
                    , Data.Html
                    , Data.Html.Message
                    , Data.Html.Login
                    , Data.Html.Root
                    , Data.Html.Register
                    , Data.Html.Page
                    , Data.Html.Util
                    , Data.Html.User
                    , Data.Html.Error
                    , Server

    if flag(tls)
        build-depends:
            warp-tls
        cpp-options: -DTLS=1
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions: DataKinds
                      , OverloadedRecordDot
                      , OverloadedStrings

executable QCIF
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base
                    , directory
                    , QCIF
    hs-source-dirs:   app
    default-language: GHC2021
    if flag(tls)
        build-depends:
            warp-tls
        cpp-options: -DTLS=1

test-suite QCIF-test
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , QCIF
                    , hedgehog
                    , http-client
                    , http-types
                    , containers
                    , mtl
                    , transformers
                    , lens
                    , exceptions
                    , bytestring
                    , aeson
                    , servant
                    , servant-server
                    , servant-auth
                    , servant-auth-server
                    , sqlite-simple
                    , uuid
                    , time
                    , text
                    , base64
                    , directory
    if flag(tls)
        build-depends:
            warp-tls
        cpp-options: -DTLS=1
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    default-language: GHC2021
    other-modules:    Test.Types
                    , Test.StateMachine
                    , Test.API
                    , Test.Commands
    default-extensions: DataKinds
                      , OverloadedRecordDot
                      , OverloadedStrings